# skillhub-api

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
apps/core/: admin.py  apps.py  fields.py  utils.py
apps/courses/: admin.py  api.py  apps.py  documents.py  models.py  schemas.py  tasks.py
apps/courses/migrations/: 0001_initial.py
apps/reviews/: admin.py  api.py  apps.py  documents.py  models.py  schemas.py
apps/reviews/migrations/: 0001_initial.py  0002_alter_criterion_options_and_more.py  0002_alter_review_source.py
apps/schools/: __init__.py  admin.py  api.py  apps.py  documents.py  models.py  schemas.py  tasks.py
apps/schools/migrations/: 0001_initial.py  0002_schooltag_schooltagoption_schooltagmatch.py
apps/search/: api.py  apps.py
apps/tags/: admin.py  apps.py  models.py
apps/tags/migrations/: 0001_initial.py
config/: api.py  asgi.py  settings.py  urls.py  wsgi.py
