[tool.poetry]
name = "skillhub-api"
version = "0.1.0"
description = ""
authors = ["khoshov"]

[tool.poetry.dependencies]
python = "^3.9"
aiostream = "^0.4.5"
django = "4.2.4"
django-ckeditor = "^6.7.0"
django-elasticsearch-dsl = "^7.3"
django-environ = "^0.10.0"
django-extensions = "^3.2.3"
django-import-export = "3.2.0"
django-mptt = "^0.14.0"
django-ninja = "0.22.2"
elasticsearch = {version = "7.17.9", extras = ["async"]}
psycopg2-binary = "^2.9.7"
pytils = "0.4.1"
uvicorn = "^0.23.2"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-cors-headers = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
